# AISPAC

./: .gitignore  CMakeLists.txt  README.md  data_process.ipynb
exec_files/: IMA_only.cpp  MCGreedy_only.cpp  RW.cpp  evaluate.cpp  main.cpp
include/: Algs.h  CommonFuncs.h  CoverageGraph.h  DynamicGraph.h  Experiments.h  GraphBase.h  InfGraph.h  ResultInfo.h  headers.h
scripts/: IMA_grqc.sh  IMA_nethept.sh  MCG_5k1w_grqc.sh  MCG_5k1w_nethept.sh  MCG_epinion.sh  MCG_grqc.sh  MCG_nethept.sh  clear_build.sh  epin_inf_k.sh  epin_inf_k_RAND.sh  epin_large_k.sh  epin_sample_num.sh  epinions_whole.sh  eval_DBLP.sh  eval_epinions.sh  eval_grqc.sh  eval_nethept.sh  eval_sl.sh  eval_wiki.sh  format_graphs.sh  mcg_sl.sh  mcg_wiki.sh  run_DBLP.sh  run_Epinions.sh  run_orkut.sh  run_twi_eps.sh  run_twitter.sh  run_twitter_k_10.sh  run_twitter_k_20.sh  run_twitter_k_30.sh  run_twitter_k_40.sh  run_twitter_k_5.sh
